# sibr_core

./: CMakeLists.txt  README.md
cmake/linux/: dependencies.cmake  install_runtime.cmake  sibr_library.cmake
cmake/windows/: dependencies.cmake  install_runtime.cmake  sibr_library.cmake
docs/: CMakeLists.txt
src/: CMakeLists.txt
src/core/assets/: InputCamera.cpp  InputCamera.hpp
src/core/openxr/: CMakeLists.txt  Config.hpp  OpenXRHMD.cpp  OpenXRHMD.hpp  OpenXRHelper.hpp  OpenXRRdrMode.cpp  OpenXRRdrMode.hpp  SwapchainImageRenderTarget.cpp  SwapchainImageRenderTarget.hpp
src/core/scene/: IParseData.hpp  ParseData.cpp  ParseData.hpp
src/core/system/: CommandLineArgs.hpp
src/core/view/: SceneDebugView.cpp  ViewBase.hpp
src/projects/basic/renderer/: TexturedMeshView.cpp
src/projects/gaussianviewer/apps/gaussianViewer/: CMakeLists.txt  main.cpp
src/projects/gaussianviewer/renderer/: CMakeLists.txt  GaussianView.cpp  GaussianView.hpp
src/projects/remote/renderer/: RemotePointView.cpp  RemotePointView.hpp
